# backend-challenge

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt
docs/: LOCALSTACK_TESTING.md
infrastructure/: cdk.json  package.json  pnpm-lock.yaml  tsconfig.json
infrastructure/lib/: api-stack.ts  processing-stack.ts  shared-stack.ts
scripts/: run-all-tests.sh  setup-localstack-test.sh  teardown-localstack-test.sh
src/: __init__.py
src/api/: handler.py  models.py  validators.py
src/processor/: __init__.py  handler.py  task_processor.py
tests/: conftest.py
tests/integration/: test_e2e.py  test_localstack.py
tests/unit/: test_api_handler.py  test_processor.py  test_validators.py
